--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ a{
     color:white;
 }
 
+a:hover{
+    opacity:0.8;
+}
+
 .main{
     width:100%;
     height:100vh;
@@ -48,6 +52,7 @@ header{
     position:relative;
     display:flex;
     justify-content:space-between;
+    align-items:center;
     padding: 5px 40px;
     z-index:2;
 }
