--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ a:hover{
     background-color:rgba(0,0,0,0.8);
     padding-top:10px;
     background-image:url(images/photo-1432821596592-e2c18b78144f.jpg);
+    background-repeat:no-repeat;
+    background-size:cover;
 }
 
 .main::after{
@@ -63,7 +65,7 @@ header{
 
 
 .links li{
-    display:inline-block;
+    display:inline;
     margin-right:50px;
 }
 
@@ -76,6 +78,10 @@ header{
     transition:all 0.3s ease 0s;
     color:rgb(40, 213, 243);
 
+}
+
+.links .active{
+    color:rgb(40, 213, 243);
 }
 
 .intro{
@@ -112,6 +118,13 @@ header{
     font-weight:600;
 }
 
+nav .menu-btn{
+    color:#fff;
+    font-size:33px;
+    cursor:pointer;
+    display:none;
+}
+
 footer{
     display:flex;
     justify-content:space-between;
@@ -139,4 +152,62 @@ footer ul li a:hover{
 footer div a:hover{
     opacity:0.8;
     transition:all 0.3s ease 0s;
+}
+
+#click{
+    display:none;
+}
+
+@media (max-width:940px){
+    nav{
+        z-index:3;
+    }
+    nav .menu-btn{
+        position:absolute;
+        top: 7px;
+        right:40px;
+        display:block;
+        float:right;
+    }
+    nav ul{
+        position:fixed;
+        top:80px;
+        left:-100%;
+        height:100vh;
+        width:100%;
+        background:#1b1b1b;
+        text-align:center;
+        transition:all 0.3s ease 0s;
+    }
+
+    #click:checked ~ ul{
+        left:0%;
+    }
+
+    #click:checked ~ .menu-btn i:before{
+        content:"\f00d";
+    }
+
+    .links li{
+        display:block;
+        margin-top:30px;
+        margin-left:40px;
+        font-size:4rem;
+    }
+
+    .intro{
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+        align-items:center;
+        flex-wrap:wrap;
+        z-index:1;
+    }
+    .intro p{
+        margin-top: 50px;
+    }
+
+    .contact{
+        display:none;
+    }
 }
