--- a/style.css
+++ b/style.css
@@ -187,7 +187,9 @@ footer div a:hover{
     #click:checked ~ .menu-btn i:before{
         content:"\f00d";
     }
-
+    header{
+        padding-left:20px;
+    }
     .links li{
         display:block;
         margin-top:30px;
