--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a:hover{
     top:0;
     left:0;
     width:100%;
-    height:100%;
+    height:100vh;
     z-index:1;
     background:rgba(0,0,0,0.6);
     box-shadow:inset 30px 30px 120px #0000 ,inset -30px -30px 120px #0000;
